<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/dark_green"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        >

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:contentDescription="Welcome"
        android:src="@drawable/ic_back"
        app:tint="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/please_fill_all_information_to_get_your_account_reaady"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_4sdp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp"
                    >

                    <TextView
                        android:id="@+id/textFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/first_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        />

                    <EditText
                        android:id="@+id/inputFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="Md Sabbir"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:includeFontPadding="false"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_13ssp"
                        />

                    <TextView
                        android:id="@+id/textLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/last_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        />

                    <EditText
                        android:id="@+id/inputLastName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/rahman"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:includeFontPadding="false"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_13ssp"
                        />

                    <TextView
                        android:id="@+id/signUpTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        />

                    <EditText
                        android:id="@+id/signUpInputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/youeaxample_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:includeFontPadding="false"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_13ssp"
                        />

                    <TextView
                        android:id="@+id/signUpTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        />

                    <EditText
                        android:id="@+id/signUpInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:includeFontPadding="false"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_13ssp"
                        />

                    <TextView
                        android:id="@+id/signUpConfirmTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11ssp"
                        />

                    <EditText
                        android:id="@+id/signUpConfirmInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:includeFontPadding="false"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_13ssp"
                        />


                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/cardSignUp" />

                <ProgressBar
                    android:id="@+id/signUpProgressbar"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    />
            </FrameLayout>


            <TextView
                android:id="@+id/textNoAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_light"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="@dimen/_6sdp"
                android:text="@string/already_have_an_account"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
                />

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="@dimen/_6sdp"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textNoAccount"
                />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>